# Financial-Researcher-AI

./: .gitignore  README.md  pyproject.toml
src/: app.py  crew.py  main.py
src/config/: agents.yaml  tasks.yaml
